# midas

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  MidasConfig.cmake.in  bitbucket-pipelines.yml  mmessenger.md  testexpt.example  tmfe.md
doc/: sc_mt_schema.pptx
drivers/bus/: null.c  rs232.cxx  tcpip.cxx
drivers/camac/: camacrpc.c  hyt1331.c
drivers/class/: generic.c  generic.cxx  hv.c  hv.cxx  multi.c  multi.cxx
drivers/device/: WIENER_SNMP.cpp  WIENER_SNMP.h  dd_sy4527.cxx  dd_sy4527.h  epics_ca.cxx  ip9258.cxx  iseg_hv_mpod.c  iseg_hv_mpod.cxx  mdevice.h  mdevice_mscb.h  mscbdev.c  mscbdev.cxx  mscbhv4.cxx  mscbhv4.h  mscbhvr.cxx  nulldev.c  psi_cobra.cxx  psi_epics.cxx  vxi11dev.cxx  vxi11dev.h
drivers/device/epics/: .gitignore  Makefile  catest.c  catest.cxx
drivers/device/vxi11/: vxi11.h  vxi11_clnt.cxx  vxi11_user.cxx  vxi11_user.h  vxi11_xdr.cxx
examples/: CMakeLists.txt  README.md
examples/Triumf/c/: fevmemodules.c
examples/Triumf/c++/: feserial.c  fesimdaq.cxx
examples/basic/: CMakeLists.txt  deferredfe.cxx
examples/camac/: Makefile
examples/ccusb/: feccusb.cxx
examples/crfe/: CMakeLists.txt  crfe.cpp  crfe.cxx
examples/custom/: myexpt.html
examples/epics/: Makefile  frontend.c
examples/eventbuilder/: mevb.c
examples/experiment/: CMakeLists.txt  Makefile  adccalib_module.cxx  adcsum_module.cxx  analyzer.cxx  frontend.c  frontend.cxx  scaler_module.cxx
examples/javascript1/: Makefile  example.html  fejrpc.cxx  fesimdaq.cxx  setup.sh
examples/lowlevel/: .gitignore  CMakeLists.txt  Makefile  consume.c  produce.c  produce.cxx  rpc_clnt.cxx  rpc_srvr.c  rpc_srvr.cxx  rpc_test.cxx  split.cxx
examples/mtfe/: CMakeLists.txt  mtfe.cxx
examples/odbxx/: CMakeLists.txt  odbxx_test.cxx
examples/raspberrypi/: Makefile
examples/sequencer/: test.msl  test.xml
examples/slowcont/: CMakeLists.txt  Makefile  frontend.c  mscb_fe.c  mscb_fe.cxx  scfe.cxx
examples/wdfe/: CMakeLists.txt  wdfe.cxx
include/: ftplib.h  history.h  mdsupport.h  mexcept.h  mexcept.hxx  mfe.h  mgd.h  midas.h  midas_c_compat.h  midas_macro.h  midasinc.h  mjson.h  mjsonrpc.h  mleak.hxx  mongoose4.h  mongoose6.h  mrpc.h  msystem.h  mvodb.h  odbxx.h  odbxx.hxx  sequencer.h  sha256.h  sha512.h  tmfe.h
progs/: CMakeLists.txt  crc32c_test.cxx  fetest.cxx  fetest_tmfe.cxx  fetest_tmfe_thread.cxx  feudp.cxx  get_record_test.cxx  hwtest.cxx  lazylogger.cxx  mchart.cxx  mdump.cxx  melog.c  mfe_link_test.cxx  mfe_link_test_cxx.cxx  mgd.c  mgd.cxx  mh2sql.cxx  mhdump.cxx  mhist.cxx  mhttpd.cxx  mlogger.cxx  mmessenger.py.in  mongoose6.cxx  mongoose616.cxx  mongoose74.cxx  msequencer.cxx  mserver.cxx  msetpriority.cxx  mstat.cxx  msysmon.cxx  mtcpproxy.go  mtransition.cxx  odb_lock_test.cxx  odbedit.cxx  odbinit.cxx  odbxx_test.cxx  sysmon.cxx  sysmon_cxx.cxx  test_init.cxx  test_sleep.cxx  (+7 more)
python/: README.md  setup.py
python/examples/: basic_client.py  basic_frontend.py  basic_odb_script.py  event_receiver.py  file_reader.py  jrpc_handler.py  multi_frontend.py
python/midas/: __init__.py  callbacks.py  client.py  event.py  file_reader.py  frontend.py
python/tests/: __init__.py  leak_checker.py  test_async_transition.py  test_deferred_transition.py  test_events.py  test_messages.py  test_odb.py  test_rpc.py
resources/: a_example.html  aaa_template.html  alarms.html  buffers.html  chat.html  config.html  controls.js  custom_example.html  custom_template.html  dialog.html  dlgHistHelp.html  dlgHistQuery.html  dlgHistory.html  dlgIHistory.html  edit_script.html  elog_edit.html  elog_list.html  elog_query.html  elog_query_form.html  elog_show.html  event_dump.html  example.html  history.html  hs_edit.html  load_script.html  mdump.html  messages.html  mhistory.js  mhttpd.css  mhttpd.js  midas.css  midas.js  mihistory.js  odb.html  odb_scl.html  odb_sor.html  odbbrowser.js  programs.html  sequencer.html  start.html  (+3 more)
resources/icons/: _source.txt  source.txt
src/: alarm.c  alarm.cxx  cmdedit.cxx  cnaf_callback.cxx  crc32c.c  crc32c.cxx  device_driver.c  device_driver.cxx  elog.c  elog.cxx  ftplib.c  history.c  history.cxx  history_common.cxx  history_image.cxx  history_midas.cxx  history_odbc.cxx  history_schema.cxx  history_sqlite_obsolete.cxx  json_paste.cxx  lazylogger.cxx  lz4.c  lz4hc.cxx  mana.cxx  mdsupport.cxx  mfe.c  mfe.cxx  mfe_link_test.c  mfe_link_test_cxx.cxx  mfed.cxx  mhttpd.cxx  midas.c  midas.cxx  midas_c_compat.cxx  midas_cxx.cxx  midasodb.cxx  mjson.cxx  mjsonodb.cxx  mjsonrpc.cxx  mjsonrpc_handler.cxx  (+20 more)
utils/: CMakeLists.txt  fetest.cxx  feudp.cxx  get_record_test.cxx  mchart.c  mcnaf.c  mdump.cxx  mh2sql.cxx  mhist.cxx  mlxspeaker.c  mstat.c  odb_lock_test.cxx
xcode/frontend.xcodeproj/: project.pbxproj
xcode/mhttpd.xcodeproj/: project.pbxproj
xcode/mlogger.xcodeproj/: project.pbxproj
xcode/mtfe.xcodeproj/: project.pbxproj
xcode/odbedit.xcodeproj/: project.pbxproj
xcode/sequencer.xcodeproj/: project.pbxproj
